# waylandpp

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  LICENSE  README.md  SConstruct  core.cpp  core.hpp  egl.cpp  egl.hpp  main.cpp  proxy.hpp  pugiconfig.hpp  runme.sh  test.cpp  wayland-client++.pc.in  wayland-client-extra++.pc.in  wayland-client-plasma++.pc.in  wayland-client-staging++.pc.in  wayland-client-unstable++.pc.in  wayland-client-wlr++.pc.in  wayland-cursor++.pc.in  wayland-egl++.pc.in  wayland-scanner++.pc.in  wayland-server++.pc.in  wayland-server-experimental++.pc.in  wayland-server-extra++.pc.in  wayland-server-plasma++.pc.in  wayland-server-unstable++.pc.in  wayland-server-wlr++.pc.in  waylandpp-config.cmake.in
.github/workflows/: build.yml
cmake/: build_client_libraries.cmake  build_server_libraries.cmake  waylandpp_helper_functions.cmake
example/: CMakeLists.txt  Makefile  SConstruct  clipboard.cpp  decor.cpp  dump.cpp  egl.cpp  egl.hpp  foreign_display.cpp  opengles.cpp  pingpong.cpp  pingpong.xml  proxy_wrapper.cpp  shm.cpp  shm_common.cpp  shm_common.hpp  test.cpp
include/: any.hpp  wayland-client-core.hpp  wayland-client.hpp  wayland-cursor.hpp  wayland-egl.hpp  wayland-server.hpp  wayland-util.hpp  wayland-version.hpp.in
protocols/: wayland.xml  xdg-shell.xml
protocols/extra/: xdg-shell.xml
protocols/staging/: ext-background-effect-v1.xml
protocols/unstable/: fullscreen-shell-unstable-v1.xml  input-method-unstable-v1.xml  linux-dmabuf-unstable-v1.xml  text-input-unstable-v1.xml  xdg-foreign-unstable-v2.xml  xdg-shell-unstable-v6.xml
scanner/: pugixml.cpp  pugixml.hpp  scanner.cpp  wayland.xml
src/: wayland-client.cpp  wayland-cursor.cpp  wayland-egl.cpp  wayland-server.cpp  wayland-util.cpp
